# aspset-510

./: .gitignore  README.md  environment-extra.yml  environment-gui.yml  environment-torch.yml  environment.yml  setup.cfg
src/aspset510/: __init__.py  camera.py  constants.py  download.py  evaluation.py  geometry.py  plot.py  scale.py  util.py
src/aspset510/res/: checksum.md5
src/aspset510/torch/: __init__.py
tests/: conftest.py  test_aspset510.py  test_camera.py  test_clip.py  test_download.py  test_evaluation.py  test_geometry.py  test_scale.py  test_torch.py  test_util.py
