[metadata]
name = aspset-510
version = 1.0.0a1
url = https://github.com/anibali/aspset-510
author = Aiden Nibali
author_email = A.Nibali@latrobe.edu.au
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.6
setup_requires =
    setuptools >= 38.6.0
install_requires =
    dataclasses; python_version < "3.7"
    importlib_resources
    numpy
    tqdm

[options.packages.find]
where = src
